# orpington-news

./: .dockerignore  .env  .env.e2e  .env.e2e.local  .env.local  .gitignore  .prettierrc.js  .yarnrc.yml  CHANGELOG.md  README.md  cypress.config.ts  docker-compose.e2e.yml  docker-compose.template.yml  docker-compose.yml  justfile  lerna.json  package.json
.github/actions/: e2e.yml  unit.yml
.github/workflows/: ci.yml  create_release.yml  cypress.yml  dev.yml  main.yml  tag_release.yml
.husky/: pre-commit
backend/: .gitignore  Cargo.toml  docker-compose.db.yml  sqlx-data.json
backend/.cargo/: config.toml
backend/.sqlx/: query-004d5637ab06d5e73e3ae3e89021e889c476e872b3d748614847c856b50e866f.json  query-007a21d91caff90698164ae884a2bba315b55944a10a10a0dcc665444b924ce6.json  query-083adacdce8eb1c956242c6c118db828ecb5aae9a842ec6c91feec388a61e398.json  query-0f42f0d361d6be0bb51ab2d0a7a096d651cf619a2ee46801f2d14833976c320d.json  query-12ec41df634edc2ace1f340a5b2904c1b3a739a182f9a6e8e9f13d40a32604d3.json  query-1720aea0caf90ffdc34ea71c0e3b265b90e5281d5f47f4766e2c27330a2203c9.json  query-1d4a09a9ca80cd427bacaed76086d6a3f9ba1a81a6012fc7dc19e46a56bdbe8c.json  query-20168dc99a934e98984a489442684961fb55914e032d3abe4c9eaa9d306ea165.json  query-294fd1b447bd22f8c4e3e90930f0ea0f4437101822bc2b73176f0d4269ffc02b.json  query-2c8ad759287953270eaa224710f5f465c8313179f9ce9b631cc3e8ff5ad82c4b.json  query-2d2ee0ebbe376f33968b0aacf8c26df56fc82f8d4afd117332373a182a68b536.json  query-2dc0059b565e1e013cd26bf99ed7f0e3a0350e2c575c8dd775426b2f08062400.json  query-30cb1a541ef699b90701f30482255b228a43c098d951bf65e95bd8efb2444a7d.json  query-3747b6053862a362741f106b5ad1f4bca1935aa3f365f9e24dc2183e9f88b7b0.json  query-3998cc6ad891b967426787b5bf2eedc675c6cb3aae7f157cf613e17f0ade460e.json  query-3ca229eb3eef340df94549e2fb00995afa35bc3616ff1083578a670ee9647711.json  query-3d7ebe93e552692fedc80e2c37f4ca0a0de12b835a6a47f1442609bd9291aa19.json  query-423fc4cc14658b9171ebe872daa6d3afeeefb098eee47bb93acea28002f5d32e.json  query-45065f7d56c1f99541356a35330759aedca0bafff7244472b1d8328a3d9ed0c1.json  query-458db6648377bfa256fe266de7af0955f157df6296f875f9be1b1f1bd0625c7a.json  query-49bfcf02b564e2ab7820b4d182038d881666cd3e657e6b631d237c2e854fc8f2.json  query-49c5119fc952951ba413acfebd50eb940e3969e79b4442d8f66d56e2e6619b47.json  query-58c0121e0c804667527c2a0f04019944e1aa7591fa5689dedafec1021ea568db.json  query-5d7c5f3bd774a79ea6bf2fdf4f35d60041c5b6a0e391e55d74cb5605cf48c964.json  query-6731b5cbb4901c40637bed0fa7de064b23b2e45ab035e40e909ae85d93e95434.json  query-695895aad1856dafa5389ba34e9f42d04617323414a206331efd6f8be65c98c9.json  query-6b6c4f65d0f1b6ebca8ea1c58b40615d89921c96d9f4ece2a71d6854ab90d418.json  query-6b7135fc480176ad569286477aa83e74af58b774c7b1ddc41f3c93e2c2271125.json  query-6d7a4b4ed2475a568ce8afc13741efdfceef180c9b1048a2b53cce9bdf0e431a.json  query-6f33db170506b3b5dbc23226222518a607f893cb6d58e22ed4c376e2a62c15d0.json  query-701cf200aa54075031519337cad7aaf4419432e0577a00e368093f32841d7255.json  query-79583e5e8f31ea84c111ca9d02f7c223653e039bcd29d1c844ee573d42c0b423.json  query-897ebaa1f51ec25666316afb0030ac200f2b8382460179be3a69387e33ed020b.json  query-89fef0d95e009e14c52a23f9e98b551c6e25ec83d947c8edceccfb040a1af776.json  query-8b1398a7277539f663eeedd0099f840919abe69b9fca0fa1318b8af9ef4db3f0.json  query-8bfe3d1eee30f74c8087e8111ee0611c68f8b1391d884adba32c89fa9ae26f87.json  query-93a92a8879a5a6b0e44bb121cab24a979981525dd7d2f30c3fb9f418f16c0bc4.json  query-a40a6f829416975207514ffcd928f7755cecb59af4e1b5244f1401c2f3f18d75.json  query-a86a18ea18b14ccdf5ec977fadbac9ea35600729193b412c50de3b7f8fa7a73b.json  query-ab5389841385092c3cdc44b4ff9fd9d0182017d5230bec8da995ad2dee22e465.json  (+21 more)
backend/migrations/: 20230109183342_init.down.sql  20230109183342_init.up.sql  20230130132440_add_task_queue.down.sql  20230130132440_add_task_queue.up.sql  20230222175012_task_queue_trigger.down.sql  20230222175012_task_queue_trigger.up.sql  20230316190436_get_ascendants_and_descendants.down.sql  20230316190436_get_ascendants_and_descendants.up.sql
backend/src/: config.rs  dedicated_executor.rs  defaults.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  worker.rs
backend/src/authentication/: middleware.rs  mod.rs  password.rs  store.rs  user_id.rs
backend/src/preferences/: mod.rs
backend/src/queue/: mod.rs  postgres.rs  queue.rs
backend/src/routes/: error.rs  mod.rs
backend/src/routes/auth/: login.rs  logout.rs  mod.rs  password.rs  register.rs  user.rs  utils.rs
backend/src/routes/collection/: collections.rs  mod.rs
backend/src/routes/collections/: clean_html.rs  date_read.rs  delete.rs  get.rs  get.sql  get_item.rs  get_items.rs  get_items.sql  import_opml.rs  mark_as_read.rs  mod.rs  move_collection.rs  post.rs  preferences.rs  put.rs  refresh.rs  types.rs  update_collection.rs  verify_owner.rs  verify_url.rs
backend/src/routes/e2e/: exit.rs  mod.rs  reset_db.rs  setup_db.rs
backend/src/routes/events/: mod.rs
backend/src/routes/preferences/: active_view.rs  expand_collapse.rs  expand_collapse.sql  get.rs  get.sql  mod.rs  preferences.rs  put.rs  types.rs
backend/src/routes/spa/: mod.rs  spa_impl.rs
backend/src/sse/: broadcast.rs  messages.rs
backend/src/tasks/: mod.rs  queue_task.rs  refresh_task.rs
backend/src/utils/: http_client.rs  mod.rs  strip_html_tags.rs  url.rs
backend/src/ws/: broadcast.rs  messages.rs  mod.rs
cypress/: global.d.ts  tsconfig.json
cypress/e2e/: feed.cy.ts  login.cy.ts  signup.cy.ts  utils.ts
cypress/feeds/: kentcdodds.xml
cypress/support/: commands.ts  e2e.ts
docker/: Dockerfile  Dockerfile.e2e  Dockerfile.e2e.feeds  apps.json  cargo_config.toml  nginx.conf  run.sh
e2e/: .env.e2e  cypress.config.ts  package-lock.json  package.json
e2e/cypress/: global.d.ts  tsconfig.json
e2e/feeds/: Dockerfile  index.js  package.json  (+1 more)
frontend/: .dockerignore  .eslintrc.json  cypress.config.ts  jest.config.js  jest.setup.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
scripts/: combine_coverage.sh  deploy_demo.sh  fix_nyc.sh  start_e2e.sh
(+207 files in other folders)
