[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-web-lab = "0.18.8"
actix-session = { version = "0.7.2", features = ["cookie-session"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "full"] }
sqlx = { version = "0.6", default-features = false, features = ["offline", "runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "json"] }
tracing = "0.1.19"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.1"
tracing-log = "0.1.1"
tracing-actix-web = "0.6"
secrecy = { version = "0.8", features = ["serde"] }
dotenvy = "0.15.6"
anyhow = "1.0.68"
thiserror = "1.0.38"
serde = "1.0.152"
serde_json = "1.0.91"
argon2 = { version = "0.4.1", features = ["std"] }
async-trait = "0.1.60"
rand = "0.8.5"
infer = "0.11.0"
chrono = { version = "0.4.23", features = ["serde"] }
actix-cors = "0.6.4"
actix-identity = "0.5.2"
data-url = "0.2.0"
strum = { version = "0.24", features = ["derive"] }
reqwest = { version = "0.11.14", features = ["gzip"] }
normalize-url-rs = "0.1.1"
scraper = "0.14.0"
url = "2.3.1"
regex = "1.7.1"
ulid = { version = "1.0.0", features = ["uuid"] }
uuid = { version = "1.2.2", features = ["serde", "v4"] }
futures = "0.3.25"
ammonia = "3.3.0"
estimated_read_time = "1.0.0"
html-escape = "0.2.13"
voca_rs = "1.15.2"
lol_html = "0.3.2"
html5ever = "0.26.0"
markup5ever_rcdom = "0.2.0"
feed-rs = "1.3.0"
actix-files = "0.6.2"
actix-service = "2.0.2"
futures-util = { version = "0.3.26", default-features = false, features = ["std"] }
parking_lot = "0.12.1"
opml = "1.1.5"
async-recursion = "1.0.2"
actix-multipart = "0.5.0"
console-subscriber = "0.1.8"
tokio-util = "0.7.7"
pin-project = "1.0.12"
num_cpus = "1.15.0"
futures-batch = "0.6.1"
opentelemetry = { version = "0.18.0", features = ["rt-tokio"], optional = true }
opentelemetry-jaeger = { version = "0.17.0", features = ["rt-tokio"], optional = true }
tracing-opentelemetry = { version = "0.18.0", optional = true }
actix-ws = "0.2.5"

[features]
e2e = []
spa = []
tracing = ["dep:opentelemetry", "dep:tracing-opentelemetry", "dep:opentelemetry-jaeger"]

[profile.release]
lto = true
strip = true
panic = "abort"
