[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-web-lab = "0.19.1"
actix-session = { version = "0.7.2", features = ["cookie-session"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "full"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "macros", "postgres", "uuid", "chrono", "migrate", "json" ] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.7"
tracing-log = "0.1.3"
tracing-actix-web = "0.6"
secrecy = { version = "0.8", features = ["serde"] }
dotenvy = "0.15.7"
anyhow = "1.0.71"
thiserror = "1.0.43"
serde = "1.0.167"
serde_json = "1.0.100"
argon2 = { version = "0.5", features = ["std"] }
async-trait = "0.1.71"
rand = "0.8.5"
infer = "0.15.0"
chrono = { version = "0.4.26", features = ["serde"] }
actix-cors = "0.6.4"
actix-identity = "0.5.2"
data-url = "0.3.0"
strum = { version = "0.25", features = ["derive"] }
reqwest = { version = "0.11.18", features = ["gzip"] }
normalize-url-rs = "0.1.1"
scraper = "0.17.1"
url = "2.4.0"
regex = "1.9.1"
ulid = { version = "1.0.0", features = ["uuid"] }
uuid = { version = "1.4.0", features = ["serde", "v4"] }
futures = "0.3.28"
ammonia = "3.3.0"
estimated_read_time = "1.0.0"
html-escape = "0.2.13"
html5ever = "0.26.0"
markup5ever_rcdom = "0.2.0"
feed-rs = "1.3.0"
actix-files = "0.6.2"
actix-service = "2.0.2"
futures-util = { version = "0.3.28", default-features = false, features = ["std"] }
parking_lot = "0.12.1"
opml = "1.1.5"
async-recursion = "1.0.4"
actix-multipart = "0.5.0"
console-subscriber = "0.1.10"
tokio-util = "0.7.8"
pin-project = "1.1.2"
num_cpus = "1.16.0"
futures-batch = "0.6.1"
opentelemetry = { version = "0.18.0", features = ["rt-tokio"], optional = true }
opentelemetry-jaeger = { version = "0.17.0", features = ["rt-tokio"], optional = true }
tracing-opentelemetry = { version = "0.18.0", optional = true }
actix-ws = "0.2.5"
lol_html = "1.0.1"
voca_rs = "1.15.2"

[features]
e2e = []
spa = []
tracing = ["dep:opentelemetry", "dep:tracing-opentelemetry", "dep:opentelemetry-jaeger"]

[profile.release]
lto = true
strip = true
panic = "abort"
